dataset1235/2025-2/1379599236/users/2694152216/executions/2110095464_4011687730.log
== RUN (2025-08-31 17:02:17)
-- CODE: 
litros = float(input("Digite a quantidade de litros comprados: "))
quantidade_Michael = litros / 3

print(round(quantidade_Michael, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
---- user output:
Digite a quantidade de litros comprados: 3.333
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
---- user output:
Digite a quantidade de litros comprados: 2.333
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
---- user output:
Digite a quantidade de litros comprados: 1.167
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
---- user output:
Digite a quantidade de litros comprados: 5.0
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
---- user output:
Digite a quantidade de litros comprados: 0.333
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
---- user output:
Digite a quantidade de litros comprados: 6.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 17:02:22)
-- CODE: 
litros = float(input("Digite a quantidade de litros comprados: "))
quantidade_Michael = litros / 3

print(round(quantidade_Michael, 3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
---- user output:
Digite a quantidade de litros comprados: 3.333
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
---- user output:
Digite a quantidade de litros comprados: 2.333
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
---- user output:
Digite a quantidade de litros comprados: 1.167
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
---- user output:
Digite a quantidade de litros comprados: 5.0
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
---- user output:
Digite a quantidade de litros comprados: 0.333
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
---- user output:
Digite a quantidade de litros comprados: 6.667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:00:55)
-- CODE: 
litros = float(input("Digite a quantidade de litros comprados: "))
quantidade_Michael = litros / 3

print(quantidade_Michael)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
---- user output:
Digite a quantidade de litros comprados: 3.3333333333333335
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
---- user output:
Digite a quantidade de litros comprados: 2.3333333333333335
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
---- user output:
Digite a quantidade de litros comprados: 1.1666666666666667
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
---- user output:
Digite a quantidade de litros comprados: 5.0
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
---- user output:
Digite a quantidade de litros comprados: 0.3333333333333333
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
---- user output:
Digite a quantidade de litros comprados: 6.666666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 17:01:02)
-- CODE: 
litros = float(input("Digite a quantidade de litros comprados: "))
quantidade_Michael = litros / 3

print(quantidade_Michael)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
---- user output:
Digite a quantidade de litros comprados: 3.3333333333333335
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
---- user output:
Digite a quantidade de litros comprados: 2.3333333333333335
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
---- user output:
Digite a quantidade de litros comprados: 1.1666666666666667
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
---- user output:
Digite a quantidade de litros comprados: 5.0
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
---- user output:
Digite a quantidade de litros comprados: 0.3333333333333333
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
---- user output:
Digite a quantidade de litros comprados: 6.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 17:01:42)
-- CODE: 
litros = float(input("Digite a quantidade de litros comprados: "))
quantidade_Michael = litros / 3

print(round(quantidade_Michael, 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
3.333
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
2.333
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.5
---- correct output:
1.167
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
5.0
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.0
---- correct output:
0.333
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
6.667
-- ERROR:
File "XXXX", line 4
    print(round(quantidade_Michael, 3)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
